[package]
name = "disarm64_defn"
version = "0.1.11"
edition = "2021"
authors = ["kromych <kromych@users.noreply.github.com>"]
description = """
This library provides structures and enums for describing AArch64 (ARMv8) instructions.
"""
documentation = "https://github.com/kromych/disarm64_defn"
homepage = "https://github.com/kromych/disarm64_defn"
repository = "https://github.com/kromych/disarm64_defn"
keywords = ["aarch64", "arm64", "arm-v8", "disassembler", "reverse-engineering"]
categories = ["command-line-utilities", "development-tools", "embedded"]
license = "Unlicense OR MIT"
readme = "Readme.md"

[lib]
name = "disarm64_defn"
path = "src/lib.rs"

[dependencies]
bitflags = { version = "2.8.0", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"], default-features = false }
strum = { version = "0.26.3", features = ["derive"] , default-features = false }

[dev-dependencies]
serde_json = "1.0.138"

[features]
default = ["std"]
std = ["strum/std", "serde/std"]
